--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,31 +1,14 @@
 // Import page-specific CSS files here.
 @import "home";
-
-.btn-primary {
-  background: #F6585B;
-}
-
-
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
+@import "navbar";
 
 .formular {
   margin: 0 auto;
   width: 500px;
 }
 
-.btn {
-  margin: -10px -65px;
-  position:relative;
-  top:50%;
-  left:50%;
-}
-
 .card {
-  margin: 25px;
+  margin: 20px;
   width: 250px;
   height: 300px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
