made new doses work

--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -5,7 +5,10 @@
     <%= f.association :cocktail, class: "form-control" %>
     </div>
     <div class="form-group">
-    <%= f.input :description, class: "form-control" %>
+    <%= f.association :ingredient, class: "form-control" %>
+    </div>
+    <div class="form-group">
+    <%= f.text_field :description, class: "form-control" %>
     </div>
     <%= f.submit "Add cocktail description", class: "btn btn-primary " %>
 </div>
